Add code model
